# cowork-platform

./: .gitignore  CLAUDE.md  Makefile  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
codegen/: generate_python.py  generate_typescript.mjs
contracts/enums/: capability-names.json  components.json  error-codes.json  event-types.json  session-status.json
contracts/jsonrpc/: approve-action.json  cancel-task.json  create-session.json  get-patch-preview.json  get-session-state.json  resume-session.json  session-event.json  shutdown.json  start-task.json
contracts/schemas/: approval-decision.json  approval-request.json  artifact-upload-request.json  artifact.json  capability.json  conversation-message.json  error-response.json  event-envelope.json  policy-bundle.json  sandbox-registration-request.json  sandbox-registration-response.json  session-cancel-request.json  session-create-request.json  session-create-response.json  session-resume-request.json  session.json  task.json  tool-definition.json  tool-request.json  tool-result.json  trace-span.json  workspace-create-request.json  workspace-create-response.json  workspace-file-list-response.json  workspace-file-upload-response.json  workspace.json
sdk/python/cowork_platform_sdk/: __init__.py  constants.py  errors.py  event_builder.py  http_client.py
sdk/typescript/src/: constants.ts  errors.ts  event-builder.ts  (+1 more)
tests/python/: test_schema_validation.py
tests/typescript/: errors.test.ts  event-builder.test.ts  models.test.ts
(+2 files in other folders)
