[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowork-platform"
version = "0.1.0"
description = "Shared contracts, generated models, and SDK helpers for the cowork project"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
sdk = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.0,<10.0",
    "structlog>=24.0,<26.0",
]
dev = [
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "coverage>=7.0,<8.0",
    "datamodel-code-generator>=0.26,<1.0",
    "check-jsonschema>=0.30,<1.0",
    "build>=1.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "generated/python/cowork_platform",
    "sdk/python/cowork_platform_sdk",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"generated/**" = ["N815", "E501", "TC003"]
"tests/**" = ["S101", "S108"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "unit: Unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sdk/python/cowork_platform_sdk"]

[tool.coverage.report]
fail_under = 90
